--- a/SEA_Application/Views/StudentCourses/Comments.cshtml
+++ b/SEA_Application/Views/StudentCourses/Comments.cshtml
@@ -55,7 +55,7 @@
     <div id="CommentHead">
         <center>
 
-           <a href="/StudentCourses/StudentLessons/@ViewBag.LessonId"> <input id="BackButton" type="button" class="btn btn-danger " name="name" value="Back To Lesson" /></a>
+           <a href="/StudentCourses/StudentLessons/@ViewBag.LessonEncryptedId"> <input id="BackButton" type="button" class="btn btn-danger " name="name" value="Back To Lesson" /></a>
         </center>
 
         <br />
