--- a/SEA_Application/Views/AspNetUser/Index.cshtml
+++ b/SEA_Application/Views/AspNetUser/Index.cshtml
@@ -220,30 +220,34 @@ else
                     <br />
                     <div class="col-md-12">
                         <div class="form-three widget-shadow">
-                            <table class="table table-striped table-bordered" id="datatable">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            Email
-                                        </th>
+                            <div class="table-responsive">
 
-                                        <th>
-                                            Phone Number
-                                        </th>
+                                <table class="table table-striped table-bordered" id="datatable">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                Email
+                                            </th>
 
-                                        <th>
-                                            UserName
-                                        </th>
-                                        <th>
-                                            Name
-                                        </th>
-                                    </tr>
-                                </thead>
+                                            <th>
+                                                Phone Number
+                                            </th>
 
-                                <tbody id="tblbody">
-                                </tbody>
+                                            <th>
+                                                UserName
+                                            </th>
+                                            <th>
+                                                Name
+                                            </th>
+                                        </tr>
+                                    </thead>
 
-                            </table>
+                                    <tbody id="tblbody">
+                                    </tbody>
+
+                                </table>
+                            </div>
+
                             <div id="Error"></div>
                         </div>
 
