--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -20,9 +20,6 @@
 
 }
 
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,6 +51,10 @@
             background-color: #F2F5FA;
             cursor: pointer;
         }
+
+        .hidden{
+            display: none;
+        }
     </style>
 
 </head>
@@ -78,8 +79,6 @@
 
             <div class="sidebar-wrapper">
                 <ul class="nav">
-
-
                     <li class="nav-item active">
                         <a href="@Url.Action("Dashboard", "Student_Dashboard")" class="nav-link nav-toggle">
                             <i class="sea-dash">
@@ -89,8 +88,7 @@
                         </a>
                     </li>
 
-
-                    <li class="nav-item ">
+                    <li class="nav-item hidden">
                         <a href="@(Url.Action("View_Project", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
@@ -99,9 +97,7 @@
                         </a>
                     </li>
 
-
-
-                    <li class="nav-item">
+                    <li class="nav-item hidden">
                         <a href="@(Url.Action("Student_Announcement", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
@@ -133,7 +129,6 @@
                         </li>
                     }
 
-
                     @*<li class="nav-item">
                         <a href="@(Url.Action("Index", "AspNetFeeDetail"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
@@ -142,8 +137,6 @@
                             <p>Online Courses</p>
                         </a>
                     </li>*@
-
-
 
                     <li class="nav-item">
                         <a href="@(Url.Action("Index", "StudentCourses"))" class="nav-link nav-toggle">
@@ -154,7 +147,6 @@
                         </a>
                     </li>
 
-
                     <li class="nav-item">
                         <a href="@(Url.Action("Quizes", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
@@ -163,7 +155,6 @@
                             <p>My Quizes </p>
                         </a>
                     </li>
-
 
                     <li class="nav-item">
                         <a href="@(Url.Action("Index", "AspNetFeeDetail"))" class="nav-link nav-toggle">
@@ -174,7 +165,6 @@
                         </a>
                     </li>
 
-
                     <li class="nav-item">
                         <a href="@(Url.Action("Student_Attendance", "Student_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
@@ -183,8 +173,6 @@
                             <p>Attendance </p>
                         </a>
                     </li>
-
-
                   
                     @*<li class="nav-item  ">
             <a href="@(Url.Action("Student_Dairy", "Student_Dashboard"))">
@@ -200,7 +188,7 @@
             </a>
         </li>*@
 
-                    <li class="nav-item">
+                    <li class="nav-item hidden">
                         <a href="@(Url.Action("Inbox", "AspNetMessages"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
@@ -210,7 +198,7 @@
                     </li>
 
 
-                    <li class="nav-item">
+                    <li class="nav-item hidden">
                         <a href="https://smartereduanalytics.on.spiceworks.com/portal/tickets" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
@@ -352,35 +340,39 @@
                                     <div class="ripple-container"></div>
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:;">
-                                    <i class="sea-icons-nav">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26.287" height="26" viewBox="0 0 26.287 26">
-                                            <defs>
-                                                <style>
-                                                    .prefix__cls-1 {
-                                                        fill: none;
-                                                        stroke: #afbccc;
-                                                        stroke-linecap: round;
-                                                        stroke-linejoin: round;
-                                                        stroke-width: 2px;
-                                                    }
-                                                </style>
-                                            </defs>
-                                            <g id="prefix__Icon-logout" transform="translate(-1953.312 -668.03)">
-                                                <path id="prefix__Path_366" d="M1969.349 672.228a3.123 3.123 0 0 0-3.042-3.2h-8.953a3.121 3.121 0 0 0-3.042 3.2v17.6a3.121 3.121 0 0 0 3.042 3.2h8.953a3.123 3.123 0 0 0 3.042-3.2" class="prefix__cls-1" data-name="Path 366" />
-                                                <path id="prefix__Path_367" d="M1973.685 685.944l4.914-4.914-4.914-4.914" class="prefix__cls-1" data-name="Path 367" />
-                                                <path id="prefix__Line_1" d="M15.373 0L0 0" class="prefix__cls-1" data-name="Line 1" transform="translate(1963.028 681.03)" />
-                                            </g>
-                                        </svg>
-                                    </i>
-                                    <span class="d-lg-inline-block d-md-inline-block">
-                                        Logout
+                            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "form_padding_20" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <li class="nav-item">
+                                    <a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">
+                                        <i class="sea-icons-nav">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="26.287" height="26" viewBox="0 0 26.287 26">
+                                                <defs>
+                                                    <style>
+                                                        .prefix__cls-1 {
+                                                            fill: none;
+                                                            stroke: #afbccc;
+                                                            stroke-linecap: round;
+                                                            stroke-linejoin: round;
+                                                            stroke-width: 2px;
+                                                        }
+                                                    </style>
+                                                </defs>
+                                                <g id="prefix__Icon-logout" transform="translate(-1953.312 -668.03)">
+                                                    <path id="prefix__Path_366" d="M1969.349 672.228a3.123 3.123 0 0 0-3.042-3.2h-8.953a3.121 3.121 0 0 0-3.042 3.2v17.6a3.121 3.121 0 0 0 3.042 3.2h8.953a3.123 3.123 0 0 0 3.042-3.2" class="prefix__cls-1" data-name="Path 366" />
+                                                    <path id="prefix__Path_367" d="M1973.685 685.944l4.914-4.914-4.914-4.914" class="prefix__cls-1" data-name="Path 367" />
+                                                    <path id="prefix__Line_1" d="M15.373 0L0 0" class="prefix__cls-1" data-name="Line 1" transform="translate(1963.028 681.03)" />
+                                                </g>
+                                            </svg>
+                                        </i>
+                                        <span class="d-lg-inline-block d-md-inline-block">
+                                            Logout
 
-                                    </span>
-                                    <div class="ripple-container"></div>
-                                </a>
-                            </li>
+                                        </span>
+                                        <div class="ripple-container"></div>
+                                    </a>
+                                </li>
+                            }
                             <li class="nav-item dropdown">
                                 <a class="nav-link p-0" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img style="width: 45px;height: 45px;" src="~/Content/assets/assets/img/Profile.png">
